--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,13 @@
     <version>4.1.0</version>
 </dependency>
 
+      <dependency>
+          <groupId>net.lightbody.bmp</groupId>
+          <artifactId>browsermob-core</artifactId>
+          <version>2.1.5</version>
+          <scope>test</scope>
+      </dependency>
+
 
 <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
 <dependency>
@@ -95,5 +102,30 @@
     <artifactId>log4j-core</artifactId>
     <version>2.8.2</version>
   </dependency>
+
+      <dependency>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-api</artifactId>
+          <version>1.7.5</version>
+      </dependency>
+      <dependency>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-log4j12</artifactId>
+          <version>1.7.5</version>
+      </dependency>
+
+      <!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
+      <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-context</artifactId>
+          <version>5.1.5.RELEASE</version>
+      </dependency>
+
+      <dependency>
+          <groupId>com.google.guava</groupId>
+          <artifactId>guava</artifactId>
+          <version>24.0-jre</version>
+      </dependency>
+
   </dependencies>
 </project>
